[#1512] Grid > scrollbar issue

--- a/src/components/grid/style/grid.scss
+++ b/src/components/grid/style/grid.scss
@@ -348,10 +348,8 @@
     }
     &--operator {
       width: 80px;
-      ::v-deep {
-        .ev-input {
-          height: 26px !important;
-        }
+      :deep(.ev-input) {
+        height: 26px !important;
       }
     }
     &.non-display {
